# opensiem-anomaly-lab

./: .gitignore  README.md  pyproject.toml  vertex.py  vertex.ts
data/: README.md
data/processed/: cicids_sample_clean.csv  cicids_sample_features.csv
docs/: anomaly_explanations.md  data_processing.md  log_retrieval.md
notebooks/: 2026-04-17_pipeline_progress.md
scripts/: build_log_search_index.py  evaluate.py  explain_anomalies.py  generate_vertex_completion.mjs  ingest.py  ingest_anomod.py  prepare_features.py  search_logs.py  sync_anomod_metrics_from_gcs.py  train.py
src/opensiem_anomaly_lab/: explanations.py  features.py  ingestion.py  modeling.py  retrieval.py
