[project]
name = "opensiem-anomaly-lab"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "datasets>=4.7.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "pytest>=9.0.2",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "shap>=0.51.0",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/opensiem_anomaly_lab"]
